--- a/source/_posts/Dev/2016-11-03-开发相关网页链接.md
+++ b/source/_posts/Dev/2016-11-03-开发相关网页链接.md
@@ -8,34 +8,55 @@ abbrlink: 23807
 date: 2016-11-03 10:17:39
 ---
 
-
 ## 基于HTML5的APP
 http://www.wex5.com/
 
 ---
-## 微信
+# 微信
+## 公众号开发
+http://www.cnblogs.com/txw1958/p/wechat-tutorial.html
+http://www.huceo.com/post/383.html
+http://www.huceo.com/post/407.html
 
+---
+## 小程序
 * 微信小程序 (应用号) 微信 web 开发者工具破解版
 
 http://www.diycode.cc/topics/308?
+
+
+<!--more-->
+
 
 * 微信小程序
 
 https://git.oschina.net/codebean/wechat-demo?from=20160925
 
+一个不错的小程序商店：http://9.shouyouzhijia.net
 
 ---
-## 前端
+# 前端
 bootstrap前端框架：http://www.runoob.com/bootstrap/bootstrap-tutorial.html
 
 
 
 ---
+# 即时通讯框架
+百万级TCP长连接即时通讯框架t-io:https://www.oschina.net/p/t-io
 
 
+---
+# 各种接口，公共接口，第三方接口
+聚合数据：https://www.juhe.cn
 
 
+---
+# JS、网页特效
+B5教程网：http://www.bcty365.com/list-61-1.html
+炫酷3D标签云JS代码：https://kaine1998.me/2017/04/11/code3djs/
 
+
+---
 
 
 
