--- a/source/_posts/web服务器/2017-02-25-Nginx.md
+++ b/source/_posts/web服务器/2017-02-25-Nginx.md
@@ -10,7 +10,10 @@ abbrlink: 9355
 date: 2017-02-25 18:15:37
 ---
 
+
+
 # Nginx安装
+
 参考：https://wizardforcel.gitbooks.io/nginx-doc/content/Text/1.3_install.html
 https://wizardforcel.gitbooks.io/nginx-doc/content/Text/6.html
 
@@ -18,13 +21,14 @@ https://wizardforcel.gitbooks.io/nginx-doc/content/Text/6.html
 # Nginx负载均衡
 Nginx负载均衡适用于小规模的集群，负载均衡的本质是所有客户端都从服务器A入口，最后被分流到B,C,D,E...服务器，出口也是经过服务器A，这样在同一个机房内只需要一个公网IP即可实现分流，但服务器A的压力及带宽是关键部分。（对于大集群可以用DNS分流）
 
+
 ---
 # Nginx反向代理
 Nginx反向代理是所有客户端都从服务器A入口，最后被分流到B,C,D,E...服务器，之后的连接是和各自的B,C,D,E...服务器的连接，这样每台服务器都要有公网IP可跨机房，也减少了服务器A的压力。
 
 ---
-# 参数
-## upstream模块常用参数
+## 参数
+### upstream模块常用参数
 1、**轮询（默认）**
 每个请求按时间顺序逐一分配到不同的后端服务器，如果后端服务器down掉，能自动剔除。
 2、**weight**
@@ -37,15 +41,15 @@ Nginx反向代理是所有客户端都从服务器A入口，最后被分流到B,
 按访问url的hash结果来分配请求，使每个url定向到同一个后端服务器，后端服务器为缓存时比较有效。
 
 |||
-|---|---|
-|server 192.168.0.100:80|	 负载均衡后端RealServer的IP或者域名，端口不写的话默认为80。高并发场景用域名，再通过DNS进行负载均衡|
- |weight=5|	 权重，默认为1，权重越大接收的请求越多|
- |max_fails=2	 |失败超过指定次数会暂停或请求转往其它服务器（最大尝试的失败次数），默认为1,0表示禁止失败尝试|
- |fail_timeout=10s|	 失败超过指定次数后暂停时间，失败超时时间，默认是10秒，通常3s左右比较合适|
- |backup	| 热备配置，前段RealServer出现问题后会自动上线backup服务器，其它服务器超时或down时才会请求backup服务器|
- |down	| 标志服务器不可用（负载过重或者不参与负载），这个参数通常配合IP_HASH使用|
+|---------|-----------|
+|server 192.168.0.100:80|负载均衡后端RealServer的IP或者域名，端口不写的话默认为80。高并发场景用域名，再通过DNS进行负载均衡|
+|weight=5|权重，默认为1，权重越大接收的请求越多|
+|max_fails=2|失败超过指定次数会暂停或请求转往其它服务器（最大尝试的失败次数），默认为1,0表示禁止失败尝试|
+|fail_timeout=10s|失败超过指定次数后暂停时间，失败超时时间，默认是10秒，通常3s左右比较合适|
+|backup|热备配置，前段RealServer出现问题后会自动上线backup服务器，其它服务器超时或down时才会请求backup服务器|
+|down|标志服务器不可用（负载过重或者不参与负载），这个参数通常配合IP_HASH使用|
 
-例：
+例：（这是在全局中的配置，具体的看下面**配置部分**）
 ```
 http {    
     
@@ -85,11 +89,13 @@ http {
            proxy_set_header   X-Real-IP        $remote_addr;
            proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
      }
-}```
+}
+
+```
 
 
 ---
-# 配置部分
+# 配置部分（这是Server配置中，或者新建conf配置）
 一般Nginx的配置文件会分成两部分，这样方便管理。
 全局配置：**/etc/nginx/nginx.conf**
 Server配置：**/etc/nginx/conf.d/default.conf**
@@ -119,7 +125,6 @@ server {
 
 ```
 
-
 ---
 参考资料：
 http://www.ilanni.com/?p=7631
@@ -127,5 +132,61 @@ http://www.cnblogs.com/jacktang/p/3669115.html
 http://www.linuxidc.com/Linux/2016-04/130350.htm
 http://www.cnblogs.com/mecity/archive/2011/06/20/2085529.html
 https://wizardforcel.gitbooks.io/nginx-doc/content/Text/7.4_loadbalance.html
+
+---
+# 多域名绑定、一机多站
+这种情况是用一台服务器上的一个Nginx共用80和443端口绑定多个域名，每个域名对应不同的网站。
+
+首先把网站放在Nginx可访问的www目录下，一个网站一个文件夹，名称随意。
+配置文件，这里有两种方法：
+法1：直接修改Nginx原有配置
+在原有配置上（有的配置没有分离的则直接在全局配置里设定；分离的则在Server部分的配置文件中配置）；直接在拷贝**server栏目**再粘贴进去，这时有两个一模一样的**server栏目**；把刚刚粘贴的那个**server栏目**中的**server_name**改为你要绑定的新网址（多个网址空格隔开，如：www.leolan.top leolan.top;）；并且修改**root对应的网站目录**，其他的配置最好先不要修改，后期配置好了再按需修改。
+
+这时`nginx -t`测试一下（这里可能会报错，可以关闭其他配置文件，单独测试报错的那个文件），没问题就`nginx -s reload`一下，不过**reload**可能并不会生效，还可能会报错（这点很古怪，我没找到原因），`service nginx restart` 也可以试试；如果你确定配置没问题就不用理会，直接重启系统，就正常了。
+
+法2：方便管理的办法就是新建一个配置文件
+一个网站对应一个配置文件，当配置出问题时不至于所有网站都挂掉，直接复制原来的配置文件一份，名称随意，只要全局配置中**include**就行，编辑复制的配置文件，修改**server_name**绑定网址；修改**root对应的网站目录**；修改**access_log**对应的日志目录。其他配置先不用修改。
+
+再`nginx -t`测试一下，并`nginx -s reload`或`service nginx restart` 或**reboot**就正常工作了。
+
+参考：
+http://blog.csdn.net/zacklin/article/details/7859680
+http://www.2cto.com/os/201411/355366.html
+
+---
+# Nginx伪静态、Rewrite伪静态规则
+伪静态是一种可以把文件后缀改成任何可能的一种方法，例如把php文件伪静态成html文件。
+
+nginx里使用伪静态是直接在nginx.conf 中写规则的，并不需要像apache要开启写模块(mod_rewrite)才能进行伪静态。
+nginx只需要打开nginx.conf配置文件，在server里面写需要的规则即可。
+
+例：**把php文件伪静态成html文件**
+法1：
+直接在Nginx配置文件中的server栏下加入以下代码：
+```
+#下面就是伪静态了
+location /{ 
+rewrite ^(.*)/equip(d+).html$ $1/index.php?m=content&c=index&a=lists&catid=$2 last; 
+} 
+access_log  access_log   off; 
+} 
+```
+然后重启nginx服务器伪静态就生效了,最好`nginx -t`测试一下配置文件是否正确，然后`nginx -s reload`重新加载也行。
+
+法2：
+为了方便维护，可以吧伪静态规则单独新建一个配置文件。
+在指定文件夹新建配置文件，如XXX_rewrite.conf并写入以下代码
+```
+ocation /{ 
+rewrite ^(.*)/equip(d+).html$ $1/index.php?m=content&c=index&a=lists&catid=$2 last; 
+} 
+```
+在Nginx配置文件中加入包含（include文件夹或文件）
+
+然后重启nginx服务器伪静态就生效了,最好`nginx -t`测试一下配置文件是否正确，然后`nginx -s reload`重新加载也行。
+
+---
+更多高级的用法详见：http://www.jb51.net/article/50899.htm
+
 
 ---
