--- a/source/_posts/数据库/2016-11-03-MySQL数据库.md
+++ b/source/_posts/数据库/2016-11-03-MySQL数据库.md
@@ -8,11 +8,13 @@ abbrlink: 37198
 date: 2016-11-03 10:46:10
 ---
 
-
 # 安装、配置
 ## 源码安装
+### 编译安装
 下载源码包：https://dev.mysql.com/downloads/mysql
-![](http://ofyfogrgx.bkt.clouddn.com/mysql_download.png)
+![](https://image.leolan.top/mysql_download.png)
+
+
 
 安装编译工具：
 ```
@@ -45,7 +47,7 @@ make -j2      #-j2是指定用2个CPU核进行make
 make install
 ```
 
-## 配置
+### 配置
 ```
 chmod +w /usr/local/mysql
 chown -R mysql:mysql /usr/local/mysql
@@ -94,7 +96,8 @@ flush privileges;
 --defaults-file=/etc/my.cnf \
 --basedir=/usr/local/mysql \
 --datadir=/usr/local/mysql/data \
---user=mysql```
+--user=mysql
+```
 
 
 <font color="#EE3B3B" >初始化的MySQL5.7.6+与MySQL5.6.xx不同之处</font>
@@ -126,20 +129,246 @@ http://blog.csdn.net/daydreamingboy/article/details/8125700
 ---     
 <font color="#EE3B3B" >关于安全模式</font>
 `/usr/local/mysql/bin/mysqld_safe --user=mysql & `    
-慎用安全模式，会清除sock文件，必须重新初始化数据库才能使用
+慎用安全模式，会清除sock文件，必须重新初始化数据库才能使用；先看密码管理一节内容。
 
 ---
-# 常用操作
-## 查看库，表类型（存储引擎）
+## yum,apt-get 安装
+
+
+---
+## 密码管理
+
+**新安装默认密码为空**`mysql -u root` 即可进入，不要`mysql -u root -p `进不去的
+大于5.7的版本默认有随机密码，执行`cat  /var/log/mysqld.log | grep password | grep 'root@localhost' | awk -F 'root@localhost: ' '{print $2}'`查看随机生成的密码。
+
+---
+### 设置密码（空密码情况下）
+* 法1.用root 进入mysql后
+mysql>`set password =password('你的密码');`
+mysql>`flush privileges;`
+
+* 法2.用root 进入mysql后，使用GRANT语句 
+mysql>`grant all on *.* to 'root'@'localhost' IDENTIFIED BY '你的密码'with grant option ;`
+mysql>`flush privileges;`
+
+* 法3.进入mysql库修改user表
+mysql>`use mysql;`
+mysql>`update user set password='你的密码' where user='root';`
+mysql>`flush privileges;`
+
+---
+### 设置某个数据库的独立密码
 ```
-show databases;
-use weixin888;
-show tables;                            #只能显示表名，不能得到表类型的信息
-SHOW TABLE STATUS FROM `weixin888`;     #weixin888是库名,显示的（所有表的信息）第二项type即是表的类型
-describe `rediscache`;                  #rediscache是表名，就能看到Type的类型
-SHOW CREATE TABLE `rediscache`;         #显示的是表创建时的信息，其中有TYPE或ENGINE一项，指定了表的类型```
+mysql -u root -p
+> （输入密码）
+> create user '用户名'@'localhost' identified by '密码';
+> grant all privileges on 库名.* to '用户名'@'localhost';
+> flush privileges;
+> exit;
+```
 
 ---
+### 修改Mysql密码(知道旧密码)
+#### Linux
+方法1： 用SET PASSWORD命令 
+首先登录MySQL。 
+格式：mysql> `set password for 用户名@localhost = password('新密码'); `
+例子：mysql> set password for root@localhost = password('123'); 
+
+方法2：用mysqladmin 
+格式：`mysqladmin -u用户名 -p旧密码 password 新密码 `
+例子：mysqladmin -uroot -p123456 password 123 
+
+方法3：用UPDATE直接编辑user表 
+首先登录MySQL。 
+```
+mysql> use mysql; 
+mysql> update user set password=password('123') where user='root' and host='localhost'; 
+mysql> flush privileges; 
+```
+
+#### Windows
+使用mysqladmin
+cd到mysql的bin文件夹，然后执行如下
+D:\Mysql\bin>`mysqladmin -u root -p password 新密码`
+Enter password:(在此输入原密码)
+格式：**mysqladmin -u用户名 -p旧密码 password 新密码。**
+
+---
+### 忘记密码恢复
+法1：**带参数的安全模式**
+使用**--skip-grant-tables**参数启动MySQL Server可以直接在命令后面接参数，也可以在MySQL配置文件[mysqld]栏中加入一句`skip-grant-tables`（这种方式改好密码后记得删除）
+
+**Linux：**
+
+- 1.用root或者运行mysqld的用户登录系统； 
+- 2．停止MySQL服务或者kill命令结束掉mysqld的进程；
+- 3.shell>`mysqld_safe --skip-grant-tables` 
+
+另开一个窗口
+
+* 法1：输入:`mysql`或`mysql -u root -p`进入mysql中修改(不用输密码)
+输入`use mysql;`并输入`UPDATE user SET password=PASSWORD("new password") WHERE user='root';`并刷新权限：`flush privileges;`
+* 法2：在shell中直接用`mysqladmin -u root flush-privileges password "new password"`修改。
+
+之后关闭第一个安全模式的窗口，重启MySQL Server(一般在关闭安全模式窗口时就会自动启动MySQL的)。
+
+**Windows：**
+1. 关闭正在运行的MySQL服务。 `net stop MySQL `
+2. 打开DOS窗口，转到mysql\bin目录。 
+3. 输入`mysqld --skip-grant-tables`或`mysqld-nt --skip-grant-tables` 回车。--skip-grant-tables 的意思是启动MySQL服务的时候跳过权限表认证。 
+4. 再开一个DOS窗口（因为刚才那个DOS窗口已经不能动了），转到mysql\bin目录。 
+5. 输入`mysql`回车，如果成功，将出现MySQL提示符 >。 
+6. 连接权限数据库： `use mysql;`改密码：`update user set password=password("123") where user="root";`
+7. 刷新权限（必须步骤）：`flush privileges;`
+8. 退出 `quit`
+9. 注销系统，再进入，使用用户名root和刚才设置的新密码123登录。
+
+---
+法2：**其他方法**
+使用phpmyadmin，直接修改Mysql库的user 表。或者使用Navicat for Mysql 直接修改连接属性。
+【据说可以用直接修改user表文件的方法：
+**法一：**关闭MySQL，Windows下打开Mysql\data\mysql，有三个文件user.frm,user.MYD,user.MYI找个知道密码的MySQL，替换相应的这三个文件，如果user表结构没改过，一般也没人去改，替换user.MYD就可以了。
+**法二：**也可以直接编辑user.MYD，找个十六进制编辑器，UltraEdit就有这个功能。关闭MySQL，打开user.MYD。将用户名root后面的八个字符改为565491d704013245，新密码就是123456。或者将它们对应的十六进制数字，（左边那里，一个字符对应两个数字），改为 00 02 02 02 02 02 02 02,这就是空密码，在编辑器右边看到的都是星号*，看起来很象小数点。重开MySQL，输入root和你的新密码。】
+
+
+
+---
+
+
+---
+# 增
+## 创建数据库
+```mysql
+mysql> CREATE DATABASE 库名;
+mysql> USE 库名;
+mysql> CREATE TABLE 表名 (字段名 VARCHAR(20), 字段名 CHAR(1));
+```
+
+---
+## 创建表
+```
+use demo;
+create table pet(
+        name varchar(20),        #名字
+        owner varchar(20),       #主人
+        species varchar(20),     #种类
+        sex char(1),             #性别
+        birth date,              #出生日期
+        death date               #死亡日期
+)
+```
+
+为了验证你的表是按你期望的方式创建，使用一个**DESCRIBE**语句：
+![](https://image.leolan.top//blog/mysql%E6%95%B0%E6%8D%AE%E5%BA%93001.jpg)
+
+---
+## 创建表(复杂形式)：
+### 创建customer表：
+```
+create table customers(
+    id int not null auto_increment,
+    name char(20) not null,
+    address char(50) null,
+    city char(50) null,
+    age int not null,
+    love char(50) not null default 'No habbit',
+    primary key(id)
+)engine=InnoDB;
+```
+
+**SELECT last_insert_id();**这个函数可以获得返回最后一个**auto_increment**值。默认值为：default 'No habbit',
+引擎类型，多为**engine = InnoDB**，如果省略了**engine=**语句，则使用默认的引擎(MyISAM)
+
+---
+## 在表中增加字段
+基本的语法为：`alter table <表名> add <字段名> <字段类型int,text...>;`
+`ALTER TABLE table_name ADD field_name field_type;`
+
+另一种稍微复杂一点：（在ims_users表的remark字段之后增加ucuserid字段，设置为int类型，该字段不为空）
+`alter table ims_users add column ucuserid int not null default 0 after remark;`
+
+---
+
+---
+# 删
+## 删除数据库
+mysql> `DROP DATABASE 库名;`
+## 删除表
+mysql> `DROP TABLE 表名；`
+## 将表中记录清空
+mysql> `DELETE FROM 表名;`
+
+## 清空表
+Mysql清空表是很重要的操作，也是最常见的操作之一，下面就为您详细介绍Mysql清空表的实现方法，希望能够对您有所帮助。
+方法1：重建库和表
+用**mysqldump --no-data**把建表SQL导出来，然后**drop database**再**create database**，执行一下导出的SQL文件，把表建上；
+`mysqldump -u root -p --no-data dbname > schema.sql`
+
+方法2：生成**清空所有表**的SQL
+`mysql -N -s information_schema -e "SELECT CONCAT('TRUNCATE TABLE ',TABLE_NAME,`
+
+如果只想清空某个表，执行以下语句(**-f是强制执行**)：
+```
+mysql -N -s information_schema -e "SELECT CONCAT('TRUNCATE TABLE ',TABLE_NAME,';') FROM TABLES WHERE TABLE_SCHEMA='eab12'" | mysql -f eab12
+```
+即清空eab12中所有的表。如果有外键的话，很可能会报错。多执行几次，直到不报错。
+
+
+
+---
+## 删除数据库中的数据
+`DELETE FROM` 语句用于从数据库表中删除记录。
+语法
+```mysql
+DELETE FROM table_name
+WHERE column_name = some_value
+```
+
+注释：SQL 对大小写不敏感。DELETE FROM 与 delete from 等效。
+为了让 PHP 执行上面的语句，我们必须使用 **mysql_query**( 函数。该函数用于向 SQL 连接发送查询和命令。
+例子
+稍早时，我们在本教程中创建了一个名为 "Persons" 的表。它看起来类似这样：
+
+|FirstName|LastName|Age|
+|---|---|---|
+|Peter|Griffin|35|
+|Glenn|Quagmire|33|
+下面的例子删除 "Persons" 表中所有 LastName='Griffin' 的记录：
+```php
+<?php
+$con = mysql_connect("localhost","peter","abc123");
+if (!$con)
+  {
+  die('Could not connect: ' . mysql_error());
+  }
+
+mysql_select_db("my_db", $con);
+
+mysql_query("DELETE FROM Persons WHERE LastName='Griffin'");
+
+mysql_close($con);
+?>
+```
+在这次删除之后，表是这样的：
+
+|FirstName|LastName|Age|
+|---|---|---|
+|Glenn|Quagmire|33|
+
+## 删除字段
+执行删除命令，使用drop关键字。
+基本的语法为：`alter table <表名> drop column <字段名>;`
+先看test_table表中有那些字段：`select * from test_table;`
+删除birth1字段：`alter table test_table drop column birth1;`
+再次检查：`select * from test_table;`
+
+---
+
+---
+
+# 改
+
 ## 修改表类型（修改存储引擎）
 ### 创建时指定存储引擎
 ```
@@ -152,7 +381,8 @@ CREATE TABLE `rediscache` (
 `send_time` datetime default NULL,
 `del_flag` tinyint(4) default '0',
 PRIMARY KEY (`id`)
-) ENGINE=MYISAM;```
+) ENGINE=MYISAM;
+```
 
 ### 创建后修改存储引擎
 ```
@@ -167,7 +397,8 @@ SHOW CREATE TABLE `rediscache`;   #能看到存储引擎
 
 格式：alter table 表名 modify column 字段名 类型;
 alter table rediscache modify column data varchar(500);
-alter table rediscache modify column data longtext;```
+alter table rediscache modify column data longtext;
+```
 
 ---
 ## mysql max_allowed_packet 设置过小导致记录写入失败
@@ -189,17 +420,20 @@ mysql根据配置文件会限制server接受的数据包大小。有时候大的
 ---
 ## max_connection 关于最大连接数
 ```
-MySQL> show status like '%connect%';```
+MySQL> show status like '%connect%';
+```
 **connections**:试图连接到MySQL服务器的连接数（不管成功与否）。
 **max_used_connections**:每个数据库用户的最大连接数。
 **threads_connected**:当前的连接数。
 
 ```
-mysql> show variables like '%connect%';```
+mysql> show variables like '%connect%';
+```
 **max_connections**:数据库服务器最大连接数。
 
 ```
-mysql> show processlist;```
+mysql> show processlist;
+```
 显示当前正在执行的MySQL连接。
 
 修改连接数直接修改配置文件，加上对应的语句就行，如：
@@ -210,8 +444,274 @@ mysql> show processlist;```
 关于设置及优化，参考：https://yq.aliyun.com/articles/50273
 
 ---
-## 备份（导出）、恢复数据库
-### 备份一个数据库
+## 关于连接错误次数过多时，MySQL禁止客户机连接
+使用**mysqladmin flush-hosts**命令清除缓存，命令执行方法如下：
+1.命令行或终端：`mysqladmin -u user_name -p flush-hosts`
+接着输入账号密码即可
+ 
+2.修改mysql配置文件，在**[mysqld]**下面添加 `max_connect_errors=1000`，然后重启mysql
+
+---
+## 修改列名、修改字段名
+```
+alter table table_name change <旧字段名> <新字段名> <int(表类型)>;
+```
+
+---
+## 字段顺序调整
+参考：http://database.51cto.com/art/201011/234259.htm
+
+---
+## 修改操作
+`UPDATE` 语句用于修改数据库表中的数据。
+语法
+```
+mysql
+UPDATE table_name
+SET column_name = new_value
+WHERE column_name = some_value
+```
+
+注释：SQL 对大小写不敏感。UPDATE 与 update 等效。
+为了让 PHP 执行上面的语句，我们必须使用 mysql_query( 函数。该函数用于向 SQL 连接发送查询和命令。
+例子
+稍早时，我们在本教程中创建了一个名为 "Persons" 的表。它看起来类似这样：
+
+|FirstName|LastName|Age|
+|---|---|---|
+|Peter|Griffin|35|
+|Glenn|Quagmire|33|
+下面的例子更新 "Persons" 表的一些数据：
+```php
+<?php
+$con = mysql_connect("localhost","peter","abc123");
+if (!$con)
+  {
+  die('Could not connect: ' . mysql_error());
+  }
+
+mysql_select_db("my_db", $con);
+
+mysql_query("UPDATE Persons SET Age = '36'
+WHERE FirstName = 'Peter' AND LastName = 'Griffin'");
+
+mysql_close($con);
+?>
+```
+在这次更新后，"Persons" 表格是这样的：
+
+|FirstName|LastName|Age|
+|---|---|---|
+|Peter|Griffin|36|
+|Glenn|Quagmire|33|
+
+---
+## 插入
+```
+INSERT INTO table_name
+VALUES (value1, value2,....)
+```
+您还可以规定希望在其中插入数据的列：
+```
+INSERT INTO table_name (column1, column2,...)
+VALUES (value1, value2,....)
+```
+注释：SQL 语句对大小写不敏感。**INSERT INTO 与 insert into** 相同。
+
+
+为了让 PHP 执行该语句，我们必须使用 **mysql_query()** 函数。该函数用于向 MySQL 连接发送查询或命令。
+例子
+在前面的章节，我们创建了一个名为 "Persons" 的表，有三个列："Firstname", "Lastname" 以及 "Age"。我们将在本例中使用同样的表。下面的例子向 "Persons" 表添加了两个新记录：
+```php
+<?php
+$con = mysql_connect("localhost","peter","abc123");
+if (!$con)
+  {
+  die('Could not connect: ' . mysql_error());
+  }
+
+mysql_select_db("my_db", $con);
+
+mysql_query("INSERT INTO Persons (FirstName, LastName, Age) 
+VALUES ('Peter', 'Griffin', '35')");
+
+mysql_query("INSERT INTO Persons (FirstName, LastName, Age) 
+VALUES ('Glenn', 'Quagmire', '33')");
+
+mysql_close($con);
+?>
+```
+
+---
+
+## 更改表结构
+
+- 增加一列：
+	`alter table pet add des char(100) null;`
+- 删除：
+    `alter table pet drop column des;`
+- 重命名表：
+	`rename table pet to animals;`
+- 添加id字段：
+```
+alter table pet add id int not null
+primary key auto_increment first;
+```
+详见：http://www.cnblogs.com/beginman/p/3249472.html
+
+---
+## 关于数据库排序规则
+数据库中的排序规则一般很少去改，不过如JIRA之类的软件可能不支持某些排序规则，就会不断的弹出警告，修改排序规则参考：
+https://www.22vd.com/7013.html
+http://blog.csdn.net/li_xiao_ming/article/details/52152414
+https://confluence.atlassian.com/jirakb/health-check-database-collation-790955315.html
+
+---
+## 把来自表单的数据插入数据库
+现在，我们创建一个 HTML 表单，这个表单可把新记录插入 "Persons" 表。
+这是这个 HTML 表单：
+```
+<html>
+<body>
+
+<form action="insert.php" method="post">
+Firstname: <input type="text" name="firstname" />
+Lastname: <input type="text" name="lastname" />
+Age: <input type="text" name="age" />
+<input type="submit" />
+</form>
+
+</body>
+</html>
+```
+
+当用户点击上例中 HTML 表单中的提交按钮时，表单数据被发送到 "insert.php"。"insert.php" 文件连接数据库，并通过 **$_POST** 变量从表单取回值。然后，mysql_query() 函数执行 **INSERT INTO** 语句，一条新的记录会添加到数据库表中。
+下面是 "insert.php" 页面的代码：
+```
+<?php
+$con = mysql_connect("localhost","peter","abc123");
+if (!$con)
+  {
+  die('Could not connect: ' . mysql_error());
+  }
+
+mysql_select_db("my_db", $con);
+
+$sql="INSERT INTO Persons (FirstName, LastName, Age)
+VALUES
+('$_POST[firstname]','$_POST[lastname]','$_POST[age]')";
+
+if (!mysql_query($sql,$con))
+  {
+  die('Error: ' . mysql_error());
+  }
+echo "1 record added";
+
+mysql_close($con)
+?>
+```
+
+---
+
+---
+# 查
+## 常用查询
+```
+status                                          #查看数据库运行状态
+show processlist;                               #查看正在执行的Sql语句
+show full processlist;                          #查看正在执行的Sql语句
+show variables like '%max_connections%';        #查看最大连接数量
+show status like '%Max_used_connections%';      #服务器响应的最大连接数
+show global status like 'Max_used_connections'; #服务器响应的最大连接数
+show status like '%Threads_connected%';         #查询当前连接数
+show status like '%table_lock%';                #查询表锁定
+show status like 'innodb_row_lock%';            #查询行锁定
+show status like '%qcache%';                    #查询缓存情况
+show variables like "%query_cache%";            #查询缓存配置信息
+show variables like "%binlog%";                 #查询核心日志
+show status like 'Aborted_clients';             #由于客户端没有正确关闭连接已经死掉，已经放弃的连接数量
+show variables like '%timeout%';                #查看超时时间
+show variables like 'log_%';                    #查看日志是否启动
+show warnings;                                  #查询警告信息
+select database();                              #查看当前选择的数据库
+show variables like '%datadir%';                #查看数据库保存位置
+```
+
+关于processlist：https://www.cnblogs.com/jasondan/p/3491258.html
+关于Max connections：https://www.cnblogs.com/qmfsun/p/4844285.html
+
+## 查询数据库的大小，占用空间
+```
+use information_schema;
+select concat(round(sum(data_length/1024/1024),2),'MB') as data from tables;      #查询所有数据的总大小
+select concat(round(sum(data_length/1024/1024),2),'MB') as data from tables where table_schema='databases_name';    #查询指定数据库的大小
+select concat(round(sum(data_length/1024/1024),2),'MB') as data from tables where table_schema='库名' and table_name='表名';    #查询指定数据库中的某个表的大小
+```
+
+---
+## 查看库，表类型（存储引擎），表结构
+```
+sataus                                  #查看数据库运行状态
+show databases;
+use weixin888;
+show tables;                            #只能显示表名，不能得到表类型的信息
+SHOW TABLE STATUS FROM weixin888;     #weixin888是库名,显示的（所有表的信息）第二项type即是表的类型
+describe rediscache;                  #rediscache是表名，就能看到Type的类型
+desc table_name;                        #查看表结构
+SHOW CREATE TABLE rediscache;         #显示的是表创建时的信息，其中有TYPE或ENGINE一项，指定了表的类型
+```
+
+---
+## 查看表中的列、类型
+```
+SHOW COLUMNS FROM auth_user; 
+或
+DESCRIBE auth_user;
+```
+**describe 表名** 是 **show columns from 表名** 的一种快捷方式。
+
+
+---
+## 查询
+`SELECT` 语句用于从数据库中选取数据。
+语法
+SELECT column_name(s) FROM table_name
+注释：SQL 语句对大小写不敏感。SELECT 与 select 等效。
+为了让 PHP 执行上面的语句，我们必须使用** mysql_query()** 函数。该函数用于向 MySQL 发送查询或命令。
+例子
+下面的例子选取存储在 "Persons" 表中的所有数据（* 字符选取表中所有数据）：
+```php
+<?php
+$con = mysql_connect("localhost","peter","abc123");
+if (!$con)
+  {
+  die('Could not connect: ' . mysql_error());
+  }
+
+mysql_select_db("my_db", $con);
+
+$result = mysql_query("SELECT * FROM Persons");
+
+while($row = mysql_fetch_array($result))
+  {
+  echo $row['FirstName'] . " " . $row['LastName'];
+  echo "<br />";
+  }
+
+mysql_close($con);
+?>
+```
+
+上面这个例子在 `$result `变量中存放由 `mysql_query()` 函数返回的数据。接下来，我们使用 `mysql_fetch_array() `函数以数组的形式从记录集返回第一行。每个随后对 `mysql_fetch_array()` 函数的调用都会返回记录集中的下一行。 `while loop `语句会循环记录集中的所有记录。为了输出每行的值，我们使用了 PHP 的 `$row `变量( `$row['FirstName']` 和 `$row['LastName']`)。
+以上代码的输出：
+Peter Griffin
+Glenn Quagmire
+
+---
+
+---
+# 备份（导出）、恢复数据库
+## 备份一个数据库
 **通用方法**：
 `mysqldump -u user_name -p db_name > file_name.sql`
 或
@@ -219,77 +719,20 @@ mysql> show processlist;```
 
 **windows**：进到MySQL的安装目录（bin下），运行：
 ```
-mysqldump --opt -h192.168.0.156 -uusername -ppassword --skip-lock-tables database_name>database.sql```
+mysqldump --opt -h192.168.0.156 -uusername -ppassword --skip-lock-tables database_name>database.sql
+```
 IP改为**localhost**也行。
 
-### 导出数据库中的一个表
+## 导出数据库中的一个表
 `mysqldump -u user_name -p db_name table_name> file_name.sql`
 
 ---
-### 导入恢复
+## 导入恢复
 ```
 source /root/mydb123.sql
-#mysql -u用户名 -p 数据库名 < 数据库名.sql
-mysql -uuser_name -p mydb123 < /root/mydb123.sql```
-
-
----
-# 密码
-
-**新安装默认密码为空**`mysql -u root` 即可进入，不要`mysql -u root -p `进不去的
-大于5.7的版本默认有随机密码，执行`cat  /var/log/mysqld.log | grep password | grep 'root@localhost' | awk -F 'root@localhost: ' '{print $2}'`查看随机生成的密码。
-
----
-## 设置密码
-* 1.用root 进入mysql后
-mysql>`set password =password('你的密码');`
-mysql>`flush privileges;`
-
-* 2.使用GRANT语句 
-mysql>`grant all on *.* to 'root'@'localhost' IDENTIFIED BY '你的密码'with grant option ;`
-mysql>`flush privileges;`
-
-* 3.进入mysql库修改user表
-mysql>`use mysql;`
-mysql>`update user set password='你的密码' where user='root';`
-mysql>`flush privileges;`
-
----
-## 设置某个数据库的独立密码
+mysql -u用户名 -p 数据库名 < 数据库名.sql
+mysql -uuser_name -p mydb123 < /root/mydb123.sql
 ```
-mysql -u root -p
-> （输入密码）
-> create user '用户名'@'localhost' identified by '密码';
-> grant all privileges on 库名.* to '用户名'@'localhost';
-> flush privileges;
-> exit;```
-
----
-## 修改Mysql密码
-- 方法一：
-使用phpmyadmin，直接修改Mysql库的user 表。或者使用Navicat for Mysql 直接修改连接属性。
-【据说可以用直接修改user表文件的方法：
-**法一：**关闭MySQL，Windows下打开Mysql\data\mysql，有三个文件user.frm,user.MYD,user.MYI找个知道密码的MySQL，替换相应的这三个文件，如果user表结构没改过，一般也没人去改，替换user.MYD就可以了。
-**法二：**也可以直接编辑user.MYD，找个十六进制编辑器，UltraEdit就有这个功能。关闭MySQL，打开user.MYD。将用户名root后面的八个字符改为565491d704013245，新密码就是123456。或者将它们对应的十六进制数字，（左边那里，一个字符对应两个数字），改为 00 02 02 02 02 02 02 02,这就是空密码，在编辑器右边看到的都是星号*，看起来很象小数点。重开MySQL，输入root和你的新密码。】
-
-- 方法二：使用mysqladmin
-cd到mysql的bin文件夹，然后执行如下
-D:\Mysql\bin>`mysqladmin -u root -p password 新密码`
-Enter password:(在此输入原密码)
-格式：**mysqladmin -u用户名 -p旧密码 password 新密码。**
-
----
-## 忘记密码
-- 1.用root或者运行mysqld的用户登录系统； 
-- 2．利用kill命令结束掉mysqld的进程； 
-- 3．使用**--skip-grant-tables**参数启动MySQL Server 
-- shell>`mysqld_safe --skip-grant-tables &` 
-- UPDATE user SET password=PASSWORD("new password") WHERE user='root';
-- 4.为root@localhost设置新密码 
-- shell>`mysqladmin -u root flush-privileges password "newpassword"`
-- 5．重启MySQL Server
-
----
 
 ---
 # MySQL特性
@@ -347,295 +790,8 @@ LastName varchar(15),
 Age int
 )";
 
-mysql_query($sql,$con);```
-
----
-
----
-# 增
-## 创建数据库
-```mysql
-mysql> CREATE DATABASE 库名;
-mysql> USE 库名;
-mysql> CREATE TABLE 表名 (字段名 VARCHAR(20), 字段名 CHAR(1));```
-
----
-## 创建表
+mysql_query($sql,$con);
 ```
-use demo;
-create table pet(
-        name varchar(20),        #名字
-        owner varchar(20),       #主人
-        species varchar(20),     #种类
-        sex char(1),             #性别
-        birth date,              #出生日期
-        death date               #死亡日期
-)```
-
-为了验证你的表是按你期望的方式创建，使用一个**DESCRIBE**语句：
-![](http://ofyfogrgx.bkt.clouddn.com//blog/mysql%E6%95%B0%E6%8D%AE%E5%BA%93001.jpg)
-
----
-## 创建表(复杂形式)：
-### 创建customer表：
-```
-create table customers(
-    id int not null auto_increment,
-    name char(20) not null,
-    address char(50) null,
-    city char(50) null,
-    age int not null,
-    love char(50) not null default 'No habbit',
-    primary key(id)
-)engine=InnoDB;```
-
-**SELECT last_insert_id();**这个函数可以获得返回最后一个**auto_increment**值。默认值为：default 'No habbit',
-引擎类型，多为**engine = InnoDB**，如果省略了**engine=**语句，则使用默认的引擎(MyISAM)
-
----
-
----
-# 删
-## 删除数据库
-mysql> `DROP DATABASE 库名;`
-## 删除数据表
-mysql> `DROP TABLE 表名；`
-## 将表中记录清空
-mysql> `DELETE FROM 表名;`
-
----
-## 删除数据库中的数据
-`DELETE FROM` 语句用于从数据库表中删除记录。
-语法
-```mysql
-DELETE FROM table_name
-WHERE column_name = some_value```
-
-注释：SQL 对大小写不敏感。DELETE FROM 与 delete from 等效。
-为了让 PHP 执行上面的语句，我们必须使用 **mysql_query**( 函数。该函数用于向 SQL 连接发送查询和命令。
-例子
-稍早时，我们在本教程中创建了一个名为 "Persons" 的表。它看起来类似这样：
-
-|FirstName|LastName|Age|
-|---|---|---|
-|Peter|Griffin|35|
-|Glenn|Quagmire|33|
-下面的例子删除 "Persons" 表中所有 LastName='Griffin' 的记录：
-```php
-<?php
-$con = mysql_connect("localhost","peter","abc123");
-if (!$con)
-  {
-  die('Could not connect: ' . mysql_error());
-  }
-
-mysql_select_db("my_db", $con);
-
-mysql_query("DELETE FROM Persons WHERE LastName='Griffin'");
-
-mysql_close($con);
-?>```
-在这次删除之后，表是这样的：
-
-|FirstName|LastName|Age|
-|---|---|---|
-|Glenn|Quagmire|33|
-
----
-
----
-
-# 改
-## 修改
-`UPDATE` 语句用于修改数据库表中的数据。
-语法
-```
-mysql
-UPDATE table_name
-SET column_name = new_value
-WHERE column_name = some_value```
-
-注释：SQL 对大小写不敏感。UPDATE 与 update 等效。
-为了让 PHP 执行上面的语句，我们必须使用 mysql_query( 函数。该函数用于向 SQL 连接发送查询和命令。
-例子
-稍早时，我们在本教程中创建了一个名为 "Persons" 的表。它看起来类似这样：
-
-|FirstName|LastName|Age|
-|---|---|---|
-|Peter|Griffin|35|
-|Glenn|Quagmire|33|
-下面的例子更新 "Persons" 表的一些数据：
-```php
-<?php
-$con = mysql_connect("localhost","peter","abc123");
-if (!$con)
-  {
-  die('Could not connect: ' . mysql_error());
-  }
-
-mysql_select_db("my_db", $con);
-
-mysql_query("UPDATE Persons SET Age = '36'
-WHERE FirstName = 'Peter' AND LastName = 'Griffin'");
-
-mysql_close($con);
-?>```
-在这次更新后，"Persons" 表格是这样的：
-
-|FirstName|LastName|Age|
-|---|---|---|
-|Peter|Griffin|36|
-|Glenn|Quagmire|33|
-
----
-## 插入
-```
-INSERT INTO table_name
-VALUES (value1, value2,....)```
-您还可以规定希望在其中插入数据的列：
-```
-INSERT INTO table_name (column1, column2,...)
-VALUES (value1, value2,....)```
-注释：SQL 语句对大小写不敏感。**INSERT INTO 与 insert into** 相同。
-
-
-为了让 PHP 执行该语句，我们必须使用 **mysql_query()** 函数。该函数用于向 MySQL 连接发送查询或命令。
-例子
-在前面的章节，我们创建了一个名为 "Persons" 的表，有三个列："Firstname", "Lastname" 以及 "Age"。我们将在本例中使用同样的表。下面的例子向 "Persons" 表添加了两个新记录：
-```php
-<?php
-$con = mysql_connect("localhost","peter","abc123");
-if (!$con)
-  {
-  die('Could not connect: ' . mysql_error());
-  }
-
-mysql_select_db("my_db", $con);
-
-mysql_query("INSERT INTO Persons (FirstName, LastName, Age) 
-VALUES ('Peter', 'Griffin', '35')");
-
-mysql_query("INSERT INTO Persons (FirstName, LastName, Age) 
-VALUES ('Glenn', 'Quagmire', '33')");
-
-mysql_close($con);
-?>```
-
----
-
-## 更改表结构
-
-- 增加一列：
-	`alter table pet add des char(100) null;`
-- 删除：
-    `alter table pet drop column des;`
-- 重命名表：
-	`rename table pet to animals;`
-- 添加id字段：
-```
-alter table pet add id int not null
-primary key auto_increment first;```
-详见：http://www.cnblogs.com/beginman/p/3249472.html
-
----
-## 把来自表单的数据插入数据库
-现在，我们创建一个 HTML 表单，这个表单可把新记录插入 "Persons" 表。
-这是这个 HTML 表单：
-```html
-<html>
-<body>
-
-<form action="insert.php" method="post">
-Firstname: <input type="text" name="firstname" />
-Lastname: <input type="text" name="lastname" />
-Age: <input type="text" name="age" />
-<input type="submit" />
-</form>
-
-</body>
-</html>```
-
-当用户点击上例中 HTML 表单中的提交按钮时，表单数据被发送到 "insert.php"。"insert.php" 文件连接数据库，并通过 **$_POST** 变量从表单取回值。然后，mysql_query() 函数执行 **INSERT INTO** 语句，一条新的记录会添加到数据库表中。
-下面是 "insert.php" 页面的代码：
-```php
-<?php
-$con = mysql_connect("localhost","peter","abc123");
-if (!$con)
-  {
-  die('Could not connect: ' . mysql_error());
-  }
-
-mysql_select_db("my_db", $con);
-
-$sql="INSERT INTO Persons (FirstName, LastName, Age)
-VALUES
-('$_POST[firstname]','$_POST[lastname]','$_POST[age]')";
-
-if (!mysql_query($sql,$con))
-  {
-  die('Error: ' . mysql_error());
-  }
-echo "1 record added";
-
-mysql_close($con)
-?>```
-
----
-
----
-# 查
-## 查看数据库
-`SHOW DATABASES;`
-
----
-## 查看表
-```
-USE blog;
-SHOW TABLES;```
-
----
-## 查看表中的列、类型
-```
-SHOW COLUMNS FROM auth_user; 
-或
-DESCRIBE auth_user;```
-**describe 表名** 是 **show columns from 表名** 的一种快捷方式。
-
-
----
-## 查询
-`SELECT` 语句用于从数据库中选取数据。
-语法
-SELECT column_name(s) FROM table_name
-注释：SQL 语句对大小写不敏感。SELECT 与 select 等效。
-为了让 PHP 执行上面的语句，我们必须使用** mysql_query()** 函数。该函数用于向 MySQL 发送查询或命令。
-例子
-下面的例子选取存储在 "Persons" 表中的所有数据（* 字符选取表中所有数据）：
-```php
-<?php
-$con = mysql_connect("localhost","peter","abc123");
-if (!$con)
-  {
-  die('Could not connect: ' . mysql_error());
-  }
-
-mysql_select_db("my_db", $con);
-
-$result = mysql_query("SELECT * FROM Persons");
-
-while($row = mysql_fetch_array($result))
-  {
-  echo $row['FirstName'] . " " . $row['LastName'];
-  echo "<br />";
-  }
-
-mysql_close($con);
-?>```
-
-上面这个例子在 `$result `变量中存放由 `mysql_query()` 函数返回的数据。接下来，我们使用 `mysql_fetch_array() `函数以数组的形式从记录集返回第一行。每个随后对 `mysql_fetch_array()` 函数的调用都会返回记录集中的下一行。 `while loop `语句会循环记录集中的所有记录。为了输出每行的值，我们使用了 PHP 的 `$row `变量( `$row['FirstName']` 和 `$row['LastName']`)。
-以上代码的输出：
-Peter Griffin
-Glenn Quagmire
 
 ---
 
@@ -672,7 +828,8 @@ while($row = mysql_fetch_array($result))
 echo "</table>";
 
 mysql_close($con);
-?>```
+?>
+```
 以上代码的输出：
 
 |FirstName|LastName|
@@ -709,7 +866,8 @@ $con = mysql_connect("localhost","peter","abc123");
 if (!$con)
   {
   die('Could not connect: ' . mysql_error());
-  }```
+  }
+```
 
 
 创建：
@@ -740,6 +898,7 @@ Age int
 mysql_query($sql,$con);
 
 mysql_close($con);   //提前关闭连接，请使用 mysql_close() 函数,不加此句则脚本结束后关闭。
-?>```
+?>
+```
 
 ---
