--- a/source/_posts/杂项/2016-11-11-常用网站链接.md
+++ b/source/_posts/杂项/2016-11-11-常用网站链接.md
@@ -15,6 +15,10 @@ top: 10
 # 解决问题 Q&A
 各种报错:[stackoverflow](http://stackoverflow.com/)
 
+
+<!--more-->
+
+
 Markdown语法：
 [Markdown入门指南](http://www.jianshu.com/p/1e402922ee32/)
 [Markdown中插入数学公式](http://blog.csdn.net/xiahouzuoxin/article/details/26478179)
@@ -44,6 +48,9 @@ http://www.yiibai.com/
 
 **godeye**:http://www.godeye.org/
 
+**慕课网（在线学习）**：http://www.imooc.com
+**云库网（前端）**：http://yunkus.com/frontcollection/#/index
+
 ---
 **HTML**：
 
@@ -68,7 +75,7 @@ Python 练手：https://www.zhihu.com/question/29372574
 京峰免费shell课程：http://v.jfedu.net/web/course/2
 github年度shell：https://www.zhihu.com/question/28182203
 Shell教程：http://c.biancheng.net/cpp/shell/
-
+bash快速安全脚本：https://www.oschina.net/translate/bash-scripting-quirks-safety-tips?lang=chs&page=1
 
 ---
 **PHP**：
@@ -111,6 +118,7 @@ http://www.tennfy.com/    VPS
 http://www.linuxde.net/
 http://www.cnblogs.com/vamei/
 
+
 Login926:
 http://www.jianshu.com/p/53e0d2a617da
 http://login926.top
@@ -122,6 +130,10 @@ https://cyang.tech
 http://lusongsong.com/
 
 https://qqdie.com/
+
+老马运维－领先的IT技术博：http://www.lmyw.net.cn/
+
+轮子哥（微软）：http://www.cppblog.com/vczh
 
 
 ---
@@ -166,11 +178,12 @@ WordPress   https://cn.wordpress.org/
 Daocloud：https://www.daocloud.io
 
 ---
-# 网站管理
+# 网站管理 服务器管理面板
 joomla    https://www.joomla.org/
 WDCP      http://www.wdlinux.cn/wdcp/
 AMH       http://amh.sh/install.htm
 PHPCMS    http://www.phpcms.cn/
+Plesk     https://www.plesk.com/ （ParallelsPlesk Panel ）
 
 ---
 # yum源
@@ -200,6 +213,7 @@ typecho    http://typecho.org
 WordPress  https://cn.wordpress.org
 Z-Blog     https://www.zblogcn.com
 Emlog      http://www.emlog.net
+JPress     http://jpress.io
 
 ---
 # 持续集成
@@ -221,6 +235,7 @@ https://my.oschina.net/alanlqc/blog/147047
 ---
 # 素材
 PS 插件和小软件推荐：http://www.4kong.com
+系统、php网站：http://www.haoid.cn
 
 ---
 # 高精度IP定位
@@ -232,12 +247,14 @@ PS 插件和小软件推荐：http://www.4kong.com
 在线转换工具：http://cn.office-converter.com
 Chrome插件网：http://www.cnplugins.com
 网盘数据搬家：www.multcloud.com
+订阅RSS服务器：tiny tiny RSS https://tt-rss.org/gitlab/fox/tt-rss
 
 ---
 # HTTPS证书
 各大云主机商都有提供免费的开发者证书，一般是一年签一次。另外不建议用沃通，不太稳定，国外产品是不认沃通的，证书还有可能被吊销的风险。
 
 [Let's Encrypt HTTPS 证书快速申请并自动续期](https://liyuans.com/archives/https-certificate-rapid-application-and-automatic-renewal.html)
+
 
 ---
 
