--- a/source/_posts/虚拟化/2016-11-03-Docker安装.md
+++ b/source/_posts/虚拟化/2016-11-03-Docker安装.md
@@ -14,6 +14,8 @@ Docker官网下载：https://www.docker.com/products/overview
 
 官方安装文档：https://docs.docker.com/engine/installation/
 
+
+
 ---
 # Centos 7
 Centos 6的内核版本太低，需要升级内核及整个系统的依赖库，比较复杂，不建议使用。
@@ -22,7 +24,7 @@ root用户登录，`uname -r`确保内核版本大于等于3.10
 `yum update`更新系统
 
 
-加入Docker源
+## 加入Docker源
 ```
 tee /etc/yum.repos.d/docker.repo <<-'EOF'
 [dockerrepo]
@@ -31,13 +33,28 @@ baseurl=https://yum.dockerproject.org/repo/main/centos/7/
 enabled=1
 gpgcheck=1
 gpgkey=https://yum.dockerproject.org/gpg
-EOF```
+EOF
+```
 
-安装
+或
+```
+tee /etc/yum.repos.d/docker.repo <<-'EOF'
+[dockerrepo]
+name=Docker Repository
+baseurl=https://yum.dockerproject.org/repo/main/centos/$releasever/ 
+enabled=1
+gpgcheck=1
+gpgkey=https://yum.dockerproject.org/gpg
+EOF
+```
+
+
+## 安装
 ```
 yum install docker-engine -y
 systemctl enable docker.service
-systemctl start docker```
+systemctl start docker
+```
 
 
 ---
@@ -64,7 +81,8 @@ root用户登录，`uname -r`确保内核版本大于等于3.10
 ```
 apt-get update
 apt-get install apt-transport-https ca-certificates
-apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D```
+apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
+```
 
 2.新增或编辑**source**列表里的**docker.list**文件
 `vim /etc/apt/sources.list.d/docker.list` 如果不存在就新增,填入下面一个地址。保存退出
@@ -98,7 +116,8 @@ docker run hello-world
 ```
 boot2docker init
 boot2docker start
-export DOCKER_HOST=tcp://$(boot2docker ip 2>/dev/null):2375```
+export DOCKER_HOST=tcp://$(boot2docker ip 2>/dev/null):2375
+```
 
 一旦你初始化化好了一个虚拟机，你就能用boot2docker stop和boot2docker start来进行控制。
 安装好后带有virtualBox虚拟机。
@@ -111,7 +130,8 @@ export DOCKER_HOST=tcp://$(boot2docker ip 2>/dev/null):2375```
 ```
 boot2docker stop
 boot2docker download
-boot2docker start```
+boot2docker start
+```
 
 
 ## Brew方式安装
@@ -119,7 +139,8 @@ boot2docker start```
 brew update
 brew install docker
 brew link docker
-brew link boot2docker```
+brew link boot2docker
+```
 
 当用brew安装某个应用后，但没有成功创建brew link（比如，link的目录已经存在相同的老版本文件导致link创建失败），此时可以将老版本删除，然后再次执行`brew link xxx`就可以创建link了，之后就可以使用brew安装的新版本了。
 
