--- a/source/_posts/路由/2017-01-04-不仅仅是一个路由器.md
+++ b/source/_posts/路由/2017-01-04-不仅仅是一个路由器.md
@@ -12,6 +12,7 @@ date: 2017-01-04 17:20:45
 
 说起路由器，回想起以前折腾路由的日子，不对，现在依然在折腾。不过，我折腾过的路由并不多，华为hg255d,newifi,斐讯302B，斐讯K1，斐讯K2，极路由1S，乐携路由，TP-Link某低端机子，AirPort Time Capsule，网件R8000；目前就这些，除了剁手花了近700软妹币买的螃蟹R8000主板，和Time Capsule ，其他都是些低端路由，虽然很折腾人，但也学到了很多东西；写这篇是因为我快不记得刷机步骤了，毕竟忙着忙着就好久没有去折腾了。
 
+
 太低端的就不说了，只是刷个固件没什么好玩的，能改装的路由才是好路由。折腾路由的原因大多是不想让路由仅仅只是个路由！！！这点很重要，于是有了**去广告，搭梯子，VPN，破解校园网，游戏加速，宽带多拨，各种BT、PT、远程、离线下载，文件共享、远程监控、网络打印机、各种小型服务器搭建**等等。
 
 ---
@@ -34,17 +35,21 @@ http://www.newbandeng.com/forum.php
 newifi是个很好刷的路由，我记得官方的就是**不死uboot**（就是那种不管刷什么固件都不影响uboot，不会变砖的路由），直到极路由固件被移植到newifi上后这个神话就被打破了，极路由的固件会覆盖原有的boot导致无法再刷其他路由固件，这种问题貌似只能用**TTL**或**编程器**修复，所以刷极路由固件需谨慎。
 
 **刷机**：一般是网线LAN连电脑，电脑设置静态IP，192.168.1.10
-![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20170105/120913764.png)
+![mark](https://image.leolan.top/blog/20170105/120913764.png)
 捅菊花插电源，不要放手，5秒左右两个或3个灯在不停的闪，这时浏览器打开192.168.1.1就可以看到固件选择界面了。
 
 ### 救砖
 我的话是买了2个ROM，还有编程器，用TTL或编程器恢复需要有电烙铁和一定的手工能力，TTL和其他路由方法是一样的，结合tftp一起用。编程器的话选择支持24,25系列的编程器，某宝搜路由编程器一大堆。店家会送驱动软件，没有就自己下载一个。相信能到这个地步的也是敢于作死的。
-![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20170105/122600937.jpg)
-![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20170105/121622216.jpg)
+![mark](https://image.leolan.top/blog/20170105/122600937.jpg)
+![mark](https://image.leolan.top/blog/20170105/121622216.jpg)
 
 [『零基础玩newifi』【四】TTL 救砖大法详解](http://www.newbandeng.com/thread-10936-1-1.html)
 [不拆机备份编程器固件](http://www.newbandeng.com/forum.php?mod=viewthread&tid=10893&extra)
 [不拆机刷编程器固件](http://www.newbandeng.com/forum.php?mod=viewthread&tid=10946&extra=)
+
+### 插件开发
+http://bbs.newifi.com/forum.php?mod=viewthread&tid=3918&extra=page%3D1&page=1
+http://bbs.newifi.com/thread-5075-1-1.html
 
 ---
 ## 极路由1s
@@ -69,7 +74,7 @@ http://www.right.com.cn/forum/thread-171116-1-1.html
 网件也可以刷DD，OpenWRT等等，但就界面来说，还是梅林比较漂亮。DD的亮点我还没找到，没怎么用过，Open的话多拨是个自成一派的东西。但是貌似Open的信号是稍微弱一点点的。
 
 配置对比图，不过这里没有R8000，R8000是2USB，3频WiFi，双核1.0GHz
-![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20170105/145246017.jpg)
+![mark](https://image.leolan.top/blog/20170105/145246017.jpg)
 
 **备份routerinfo**参考：
 http://koolshare.cn/forum.php?mod=viewthread&tid=73278&highlight=routerinfo
@@ -98,7 +103,8 @@ mtd5: 04000000 00020000 "brcmnand"
 
 #备份相应的区块
 dd if=/dev/mtd0 of=/tmp/cfe.bin     
-dd if=/dev/mtd1 of=/tmp/nvram.bin```
+dd if=/dev/mtd1 of=/tmp/nvram.bin
+```
 
 恢复：
 打开命令窗口，重新Telnet到路由，输入用户名，然后是密码登录路由器，把文件上传到/tmp目录下，接着输入以下命令：
@@ -107,7 +113,8 @@ cd /tmp
 mtd write cfe.bin cfe
 mtd write nvram.bin nvram
 nvram commit
-reboot```
+reboot
+```
 路由器会自动重启，完成CFE刷写，重新复位次就可看到效果了。
 
 ---
@@ -139,7 +146,7 @@ http://koolshare.cn/thread-73365-1-1.html
 也可以使用华硕的固件修复程序：**Firmware_Restoration**
 
 官方救砖教程无效的话就要把螃蟹拆开来，上TTL线。
-![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20170105/151747137.jpg)
+![mark](https://image.leolan.top/blog/20170105/151747137.jpg)
 用SecureCRT或者其他的终端连上去（有时某些终端是不支持一些功能的，比如xshell和putty的功能就互不相同，那就换一个终端）。
 
 **开机不断Ctrl+C暂停设备启动，停止后，会停留在CFE命令行模式，您在模式下输入小写的help就可以看到各个命令的使用方法**
@@ -160,8 +167,8 @@ KS论坛支持的机型是最多的，恩山论坛中低端路由支持贴比较
 [Koolshare固件指南 & FAQ，新人浏览观看](http://koolshare.cn/thread-4602-1-1.html)
 
 梅林固件是这样子的
-![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20170105/154859008.png)
-![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20170105/155001133.png)
+![mark](https://image.leolan.top/blog/20170105/154859008.png)
+![mark](https://image.leolan.top/blog/20170105/155001133.png)
 
 插件的使用比较简单，而且也有链接说明，是比较人性化的定制，之后有什么比较好玩的再更新博客！
 
